--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 .DS_Store
 __pycache__
 .ipynb_checkpoints
+.idea
 
-*.pcl
 *.pkl
+*.pcl
+*.p
 *.png
-
+*.pdf
 *.mat
-
-cluster_sim
-pyBigBro_30_03_2021
-wake_measurements_30_03_2021
+*.txt
