Refactored supervised setup

--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,5 @@ data
 ml-lps-recon-length
 slurm-*.out
 virtual-diagnostics-euxfel-current-gan
+virtual-diagnostics-euxfel-current-supervised
 wandb
