Fix plot logging for LPS training

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,5 @@ slurm-*.out
 virtual-diagnostics-euxfel-current-gan
 virtual-diagnostics-euxfel-current-legacy
 virtual-diagnostics-euxfel-current-supervised
+virtual-diagnostics-euxfel-lps-legacy
 wandb
